# mozeidon-app

./: LICENSE.md  README.md  chrome_mozeidon.json  index.html  mozeidon.json  package.json  pnpm-lock.yaml
src/: App.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/native-manifests/: README.md  chrome_native_manifest.json  firefox_native_manifest.json
src-tauri/src/: command.rs  lib.rs  main.rs  tray.rs  window.rs
src-tauri/src/commands/: hide.rs  host.rs  init.rs  mod.rs  models.rs  mozeidon.rs  mozeidon_write.rs  show.rs  write_manifest.rs
src-tauri/src/common/: mod.rs  native_manifests.rs
src-tauri/src/setup/: mac.rs  mod.rs  windows.rs
src/actions/: actions.ts
src/components/: AppSettingsJsonEditor.tsx  AppSettingsValidationErrors.tsx  BookmarksEditor.tsx  HostConfigJsonEditor.tsx  List.tsx  NativeManifestEditor.tsx  NativeManifestJsonEditor.tsx  Row.tsx  SearchInput.tsx  SettingsEditor.tsx  SettingsJsonEditor.tsx  SettingsValidationErrors.tsx  SettingsView.tsx  ShortcutListenerContainer.tsx  TextSelector.tsx  VersionRequirements.tsx  WebSearchListContainer.tsx  WebSearchRow.tsx  WindowShortcutListener.tsx
src/domain/bookmarks/: models.ts  validation.ts
src/domain/history/: models.ts
src/domain/settings/: models.ts  storage.ts  validation.ts
src/domain/tabs/: models.ts
src/hooks/: useInit.tsx  useSettings.tsx  useUserNotification.tsx
src/types/: globals.d.ts
src/utils/: applyTheme.ts  constants.ts  faviconCache.ts  getKeyCombination.ts  getPlatform.ts  itemsInViewPort.ts  keyDownHandler.ts  searchHandler.ts  strings.ts  time.ts
